removed unnessary information in email alerts

--- a/Code/src/web/views/email/_bolo-details.jade
+++ b/Code/src/web/views/email/_bolo-details.jade
@@ -1,3 +1,7 @@
+<!-- 
+I do not believe this is being used anymore since email aesthetics have
+been updated on 3 Jun 2016. JMB
+-->
 h2 #{bolo.category}
 
 table
