--- a/Code/src/web/views/email/layout.jade
+++ b/Code/src/web/views/email/layout.jade
@@ -1,4 +1,7 @@
-
+<!--
+I do not believe this is being used anymore since email aesthetics have
+been updated on 3 Jun 2016. JMB
+-->
 block content
 
 
