--- a/Code/src/web/views/email/new-bolo-notification.jade
+++ b/Code/src/web/views/email/new-bolo-notification.jade
@@ -1,11 +1,7 @@
-extends ./layout.jade
 
 block content
-    p Hi,
-    p A new 
-        a(href=app_url + '/bolo/details/' + bolo.id ) #{bolo.category} BOLO 
-        | has been recently posted on the BOLO Flier Creator app. 
-        a( href=app_url ) Login 
-        | to view this and other BOLOs.
-
-    include ./_bolo-details.jade
+    p A new&nbsp;
+        a(href=app_url + '/bolo/details/' + bolo.id ) #{bolo.category} BOLO
+        |&nbsp;has been recently posted on the BOLO Flier Creator app.&nbsp;
+        a( href=app_url ) Login
+        |&nbsp;to view this and other BOLOs.
