--- a/Code/src/web/views/email/update-bolo-notification.jade
+++ b/Code/src/web/views/email/update-bolo-notification.jade
@@ -1,11 +1,7 @@
-extends ./layout.jade
 
 block content
-    p Hi,
-    p A recent update has been made to a 
-        a( href=app_url + '/bolo/details/' + bolo.id ) #{bolo.category} BOLO 
-        | on the BOLO Flier Creator app. 
-        a( href=app_url ) Login 
-        | to view this and other BOLOs.
-
-    include ./_bolo-details.jade
+    p A recent update has been made to a&nbsp;
+        a( href=app_url + '/bolo/details/' + bolo.id ) #{bolo.category} BOLO
+        |&nbsp;on the BOLO Flier Creator app.&nbsp;
+        a( href=app_url ) Login
+        |&nbsp;to view this and other BOLOs.
