--- a/Code/src/web/views/bolo-details.jade
+++ b/Code/src/web/views/bolo-details.jade
@@ -11,7 +11,7 @@ block jumbo
       .row
         .col-xs-14.col-md-6
           .pull-left
-            a.btn.btn-default.pull-right( href="/bolo/details/pdf/" + bolo.id + '.pdf' ) Generate PDF
+            a.btn.btn-default.pull-right( href="/bolo/details/pdf/" + bolo.id + '.pdf',target="_blank" ) Generate PDF
         .col-xs-14.col-md-6
           .pull-right
             if((bolo.record)&&(tier > 2))
