Hid Wait I remember button

--- a/Code/src/web/views/change-password.jade
+++ b/Code/src/web/views/change-password.jade
@@ -18,4 +18,5 @@ block admin-content
 
         .form-group
             button.btn.btn-primary(type="submit" value="save") Submit
-            a(href='/login' style="margin-left:10px") Wait, I remember
+            if url !== "/expiredpassword"
+                a(href='/login' style="margin-left:10px") Wait, I remember
