--- a/Code/src/web/views/email/new-bolo-notification.jade
+++ b/Code/src/web/views/email/new-bolo-notification.jade
@@ -2,6 +2,6 @@
 block content
     p A new&nbsp;
         a(href=app_url + '/bolo/details/' + bolo.id ) #{bolo.category} BOLO
-        |&nbsp;has been recently posted on the BOLO Flier Creator app.&nbsp;
+        |&nbsp;has been posted.&nbsp;
         a( href=app_url ) Login
-        |&nbsp;to view this and other BOLOs.
+        |&nbsp;to view other BOLOs.
