--- a/Code/src/web/views/email/update-bolo-notification.jade
+++ b/Code/src/web/views/email/update-bolo-notification.jade
@@ -1,7 +1,7 @@
 
 block content
-    p A recent update has been made to a&nbsp;
+    p A recent update to a&nbsp;
         a( href=app_url + '/bolo/details/' + bolo.id ) #{bolo.category} BOLO
-        |&nbsp;on the BOLO Flier Creator app.&nbsp;
+        |&nbsp;has been made.&nbsp;
         a( href=app_url ) Login
         |&nbsp;to view this and other BOLOs.
