added dropdown menu

--- a/Code/src/web/views/partials/bolo-options.jade
+++ b/Code/src/web/views/partials/bolo-options.jade
@@ -5,7 +5,7 @@
         'FRAUD', 'HOME INVASION', 'HOMICIDE', 'MISSING JUVENILE',
         'MISSING PERSON', 'NARCOTICS', 'NEED TO IDENTIFY', 'OFFICER SAFETY',
         'PC TO ARREST', 'ROBBERY', 'RUNAWAY', 'SEX OFFENSE',
-        'SITUATIONAL AWARENESS', 'THEFT - AUTO', 'THEFT - BOAT', 'THEFT - GRAND',
+        'SITUATIONAL AWARENESS', 'THEFT - GRAND',
         'THEFT - PETIT', 'WANTED', 'FIELD INTERVIEW'
     ]
 
@@ -28,4 +28,3 @@
     var bolo_status = [
         '','Canceled', 'In Custody', 'Located', 'Recovered'
     ]
-
