--- a/Code/src/web/views/bolo-create-auto-form.jade
+++ b/Code/src/web/views/bolo-create-auto-form.jade
@@ -10,21 +10,20 @@ block jumbo
 block content
     include ./partials/global-alerts.jade
     include ./partials/bolo-options.jade
-    
+
     form#create-bolo-form(action= "/bolo/create" enctype="multipart/form-data" method="post")
         input( type = "hidden" name="status" value="new")
-        +select_options( "category", "Category", categories, true, "" )
 
-        +input_text( "firstName", "First Name", "", false, "" )
-        +input_text( "lastName", "Last Name", "", false,  "" )
-        +input_text( "dob", "Date of Birth (MM/DD/YYYY )", "MM/DD/YYYY", "" )
-        +input_text( "dlNumber", "Drivers License Number", "", false, "" )
-        +select_options( "race", "Race", races, false, "" )
-        +select_options( "sex", "Sex", sex, false, "" )
-        +input_text( "height", "Height - Feet-Inches (e.g. 05-09)", "e.g. 05-09", false, "" )
-        +input_text( "weight", "Weight - Pounds", "", false, "" )
-        +select_options( "hairColor", "Hair Color", hair_colors, false, "" )
-        +input_textarea( "tattoos", "Tattoos", "", false, "" )
+        +input_text_static( "category", "Category", "", false, "THEFT - AUTO")
+
+        +input_text( "vehicleName", "Vehicle Name", "", false, "" )
+        +input_text( "vehicleModel", "Vehicle Model", "", false,  "" )
+        +input_text( "vehicleColor", "Vehicle Color", "", false, "" )
+        +input_text( "vehicleYear", "Vehicle Year", "", false,  "" )
+        +input_text( "vehicleName", "Vehicle Name", "", false, "" )
+        +input_text( "vehicleType", "Vehicle Type", "", false,  "" )
+        +input_text( "vehicleTag", "Vehicle Tag Number", "", false, "" )
+        +input_text( "vehicleIdNumber", "Vehicle Identification Number (VIN)", "", false,  "" )
 
         .form-group.row
             .col-md-4
@@ -47,5 +46,3 @@ block content
             button.btn.btn-default( name = "option" type = "submit" value = "submit") SUBMIT
             button.btn.btn-default( name = "option" type = "submit" value = "preview" ) PREVIEW
             button.btn.btn-default( name = "option" type="submit" value="pdf" ) PDF
-            
-                      
