--- a/Code/src/web/views/includes/_form.jade
+++ b/Code/src/web/views/includes/_form.jade
@@ -18,6 +18,11 @@ mixin input_text( name, label, placeholder, required, value, type )
         label.control-label( for=name ) #{label}
         input.form-control( name=name type=type?type:'text' placeholder=placeholder value=value )
 
+mixin input_text_static( name, label, placeholder, required, value, type )
+    .form-group
+        label.control-label( for=name ) #{label}
+        input.form-control( name=name type=type?type:'text' placeholder=placeholder value=value readonly)
+
 
 mixin input_textarea( name, label, placeholder, required, value )
     .form-group
