Field name modified in theft-auto form and deleted duplicated field

--- a/Code/src/web/views/bolo-create-auto-form.jade
+++ b/Code/src/web/views/bolo-create-auto-form.jade
@@ -16,11 +16,10 @@ block content
 
         +input_text_static( "category", "Category", "", false, "THEFT - AUTO")
 
-        +input_text( "vehicleName", "Vehicle Name", "", false, "" )
+        +input_text( "vehicleMake", "Vehicle Make", "", false, "" )
         +input_text( "vehicleModel", "Vehicle Model", "", false,  "" )
         +input_text( "vehicleColor", "Vehicle Color", "", false, "" )
         +input_text( "vehicleYear", "Vehicle Year", "", false,  "" )
-        +input_text( "vehicleName", "Vehicle Name", "", false, "" )
         +input_text( "vehicleType", "Vehicle Type", "", false,  "" )
         +input_text( "vehicleTag", "Vehicle Tag Number", "", false, "" )
         +input_text( "vehicleIdNumber", "Vehicle Identification Number (VIN)", "", false,  "" )
