variables for bolo create form changed

--- a/Code/src/web/views/bolo-create-boat-form.jade
+++ b/Code/src/web/views/bolo-create-boat-form.jade
@@ -19,10 +19,10 @@ block content
         +input_text( "boatMake", "Boat Make", "", false, "" )
         +input_text( "boatModel", "Boat Model", "", false,  "" )
         +input_text( "boatColor", "Boat Color", "", false, "" )
-        +input_text( "yearBoat", "Year", "", false, "" )
-        +input_text( "typeBoat", "Type", "", false, "" )
-        +input_text( "hullIdNmber", "Hull Identification Number", "", false, "" )
-        +input_text( "registrationNumber", "Registration Number", "", false, "" )
+        +input_text( "boatYear", "Boat Year", "", false, "" )
+        +input_text( "boatType", "Boat Type", "", false, "" )
+        +input_text( "boatHullIdNumber", "Boat Hull Identification Number", "", false, "" )
+        +input_text( "boatRegistrationNumber", "Boat Registration Number", "", false, "" )
 
         .form-group.row
             .col-md-4
