Added new routes for theft-auto and theft-boat previews. Added to theft-auto and theft-boat the service for preview pdf and generate pdf. Also a variable changed in create auto

--- a/Code/src/web/views/bolo-create-auto-form.jade
+++ b/Code/src/web/views/bolo-create-auto-form.jade
@@ -21,7 +21,7 @@ block content
         +input_text( "vehicleColor", "Vehicle Color", "", false, "" )
         +input_text( "vehicleYear", "Vehicle Year", "", false,  "" )
         +input_text( "vehicleType", "Vehicle Type", "", false,  "" )
-        +input_text( "vehicleTag", "Vehicle Tag Number", "", false, "" )
+        +input_text( "vehicleTagNumber", "Vehicle Tag Number", "", false, "" )
         +input_text( "vehicleIdNumber", "Vehicle Identification Number (VIN)", "", false,  "" )
 
         .form-group.row
