--- a/Code/src/web/views/bolo-create-generalbolo-form.jade
+++ b/Code/src/web/views/bolo-create-generalbolo-form.jade
@@ -19,6 +19,8 @@ block content
         +input_text( "lastName", "Last Name", "", false,  "" )
         +input_text( "dob", "Date of Birth (MM/DD/YYYY )", "MM/DD/YYYY", "" )
         +input_text( "dlNumber", "Drivers License Number", "", false, "" )
+        +input_text( "address", "Address", "", false, "" )
+        +input_text( "zipCode", "Zip Code", "", false, "" )
         +select_options( "race", "Race", races, false, "" )
         +select_options( "sex", "Sex", sex, false, "" )
         +input_text( "height", "Height - Feet-Inches (e.g. 05-09)", "e.g. 05-09", false, "" )
