--- a/Code/src/web/views/includes/_form.jade
+++ b/Code/src/web/views/includes/_form.jade
@@ -16,7 +16,7 @@ mixin check_box(name,label,required)
 mixin input_text( name, label, placeholder, required, value, type )
     .form-group
         label.control-label( for=name ) #{label}
-        input.form-control( name=name type=type?type:'text' placeholder=placeholder value=value )
+        input.form-control( name=name type=type?type:'text' placeholder=placeholder value=value id=name)
 
 mixin input_text_static( name, label, placeholder, required, value, type )
     .form-group
@@ -33,7 +33,7 @@ mixin input_textarea( name, label, placeholder, required, value )
 mixin select_options( name, label, options, required, selectedValue, functionCall )
     .form-group
         label.control-label( for=name ) #{label}
-        select.form-control( name=name onchange = functionCall)
+        select.form-control( name=name onchange = functionCall id=name)
             each val in options
                 if selectedValue == val
                     +option( val,true )
