--- a/Code/src/web/views/bolo-details.jade
+++ b/Code/src/web/views/bolo-details.jade
@@ -71,6 +71,14 @@ block content
                   +form_labels_row("License #", bolo.data.dlNumber, bolo.data.dlNumber?"":"hidden")
                 else
                   +form_labels_row("License #", "N/A" )
+                if bolo.data.address.length
+                  +form_labels_row("Address", bolo.data.address, bolo.data.address?"":"hidden")
+                else
+                  +form_labels_row("Address", "N/A" )
+                if bolo.data.zipCode.length
+                  +form_labels_row("Zip Code", bolo.data.zipCode, bolo.data.zipCode?"":"hidden")
+                else
+                  +form_labels_row("Zip Code", "N/A" )
                 if bolo.data.height.length
                   +form_labels_row("Height", bolo.data.height, bolo.data.height?"":"hidden")
                 else
@@ -79,10 +87,6 @@ block content
                   +form_labels_row("Weight", bolo.data.weight + "lbs", bolo.data.weight?"":"hidden")
                 else
                   +form_labels_row("Weight", "N/A" )
-                if bolo.data.address.length
-                  +form_labels_row("Address", bolo.data.address, bolo.data.address?"":"hidden")
-                else
-                  +form_labels_row("Address", "N/A" )
                 if bolo.data.sex != "Select an option..."
                   +form_labels_row("Sex", bolo.data.sex, bolo.data.sex?"":"hidden")
                 else
@@ -110,7 +114,7 @@ block content
           | &nbsp;
         | &nbsp;
         if bolo.data.video_url.length
-          p.strong Video Link: 
+          p.strong Video Link:
           a(href=bolo.data.video_url) #{bolo.data.video_url}
           p
           | &nbsp;
