Removed N/A option from Bolo options and alphabetically sorted

--- a/Code/src/web/views/partials/bolo-options.jade
+++ b/Code/src/web/views/partials/bolo-options.jade
@@ -1,8 +1,8 @@
 
 -
     var categories = [
-        'N/A', 'INFORMATION', 'ARSON', 'BURGLARY', 'DOMESTIC SECURITY', 'ESCAPE',
-        'FRAUD', 'HOME INVASION', 'HOMICIDE', 'MISSING JUVENILE',
+        '', 'ARSON', 'BURGLARY', 'DOMESTIC SECURITY', 'ESCAPE',
+        'FRAUD', 'HOME INVASION', 'HOMICIDE', 'INFORMATION', 'MISSING JUVENILE',
         'MISSING PERSON', 'NARCOTICS', 'NEED TO IDENTIFY', 'OFFICER SAFETY',
         'PC TO ARREST', 'ROBBERY', 'RUNAWAY', 'SEX OFFENSE',
         'SITUATIONAL AWARENESS', 'THEFT - GRAND',
