Agency Susbcription updates from email

--- a/Code/src/web/views/email/new-bolo-notification.jade
+++ b/Code/src/web/views/email/new-bolo-notification.jade
@@ -8,5 +8,5 @@ block content
     br
     br
     p Click;
-      a(href=app_url + '/account/notifications/unsubscribe/'+bolo.author+'/'+ bolo.agencyName ) here
+      a(href=app_url + '/account/notifications/unsubscribe/'+ bolo.agencyName ) here
       |&nbsp;to unsubscribe from #{bolo.agencyName} notifications.
