Implemented user story 1008

--- a/Code/src/web/views/agency-create-form.jade
+++ b/Code/src/web/views/agency-create-form.jade
@@ -25,6 +25,7 @@ block admin-content
         
         +input_text( "agency_id", "Agency ID", "", false, "" )
         +input_text( "name", "Agency Name", "", false, "" )
+        +input_text( "domain", "Agency Domain", "@example-fl.gov", false, "" )
         +input_text( "address", "Address", "", false, "" )
         +input_text( "city", "City", "", false, "" )
         +select_options( "state", "State", states, false, "" )
