--- a/Code/src/web/views/partials/paging-byAgency.jade
+++ b/Code/src/web/views/partials/paging-byAgency.jade
@@ -27,4 +27,4 @@ if ( paging && paging.first && paging.current && paging.last )
                 span.glyphicon.glyphicon-menu-right( aria-hidden="true" )
 
 else
-    p.text-small There is no Active BOLOs for this Agency
+    p.text-small No Active BOLOs for this Agency
