--- a/Code/src/web/views/agency-edit-form.jade
+++ b/Code/src/web/views/agency-edit-form.jade
@@ -60,7 +60,7 @@ block admin-content
         input( name="id" type="hidden" value=agency.id )
         input( name="agency_id" type="hidden" value=agency.agency_id)
         +input_text( "name", "Agency Name", "", false, agency.name)
-        +input_text( "domain", "Agency Domain", "", false, agency.domain)
+        +input_text( "domain", "Agency Domain", "@example-fl.gov", false, agency.domain)
         +input_text( "address", "Address", "", false, agency.address )
         +input_text( "city", "City", "", false, agency.city )
         +select_options( "state", "State", states, false, agency.state )
