--- a/Code/src/web/views/partials/main-nav.jade
+++ b/Code/src/web/views/partials/main-nav.jade
@@ -29,5 +29,7 @@ mixin dropdown_menu ( label )
             if (tier === 'ROOT' || tier === 'ADMINISTRATOR')
                 li: a( href="/admin" ) Admin
         ul.nav.navbar-nav.navbar-right
-            li: a( href="/account" ) User Options: <b>#{username}</b>
-            li: a( href="/logout" ) Logout
+            +dropdown_menu(username)
+                li: a( href="/account" ) Setting
+                li: a(href="/userGuide") User Guide
+                li: a( href="/logout" ) Logout
