Officers can only see 'All Bolos', 'My Bolos', and Their Agencies Bolos in the filter dropdown

--- a/Code/src/web/views/layout.jade
+++ b/Code/src/web/views/layout.jade
@@ -5,6 +5,8 @@ doctype html
 
 script(src="/bower_components/jquery/dist/jquery.min.js" )
 script(src="/bower_components/jquery-ui/jquery-ui.min.js" )
+script(src="/bower_components/css/bootstrap-multiselect.css")
+script(src="/bower_components/js/bootstrap-multiselect.js")
 script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" )
 script( type="text/javascript", src="/js/ui.js" )
 block scripts
@@ -40,4 +42,3 @@ html.no-js
             .push
 
         include ./partials/footer.jade
-
