--- a/Code/src/web/views/bolo-list-agency.jade
+++ b/Code/src/web/views/bolo-list-agency.jade
@@ -12,17 +12,16 @@ block jumbo
                         span.caret
                     ul.dropdown-menu
                         -var dimensions = "width: 210px; margin: 0 auto;"
-                        a.btn.btn-default(href="/bolo/author" style=dimensions) My Bolos
+                        a.btn.btn-default(href="/bolo/mybolos" style=dimensions) My Bolos
                         a.btn.btn-default(href="/bolo/" style=dimensions) View all
-                        for agency in agencies
-                            a.btn.btn-default(href="/bolo/agency/"+agency.id name="agencyID" value=agency.id style=dimensions) #{agency.name}
-
+                        a.btn.btn-default(href="/bolo/agency/" + userAgency.id name="agencyID" style=dimensions) #{userAgency.name}
+                        
 block content
     include ./partials/global-alerts.jade
-
+        h2 #{filter}
     if bolos && 0 === bolos.length
         p.lead No active BOLOs at this time.
-
+    
     .row
         for bolo in bolos
             if bolo && bolo.confirmed === true
