New variables vehicle trim and vehicle license plate

--- a/Code/src/web/views/partials/bolo-options.jade
+++ b/Code/src/web/views/partials/bolo-options.jade
@@ -9,7 +9,9 @@
         'THEFT - PETIT', 'WANTED', 'FIELD INTERVIEW'
     ]
 
-    var sex = ['','Male','Female'];
+    var sex = ['','Male','Female'
+    ]
+
     var races = [
         '',
         'Hispanic',
