--- a/Code/src/web/views/bolo-create-auto-form.jade
+++ b/Code/src/web/views/bolo-create-auto-form.jade
@@ -16,12 +16,12 @@ block content
 
         +input_text_static( "category", "Category", "", false, "THEFT - AUTO")
 
-        +input_text( "vehicleMake", "Vehicle Make", "", false, "" )
-        +input_text( "vehicleModel", "Vehicle Model", "", false,  "" )
-        +input_text( "vehicleColor", "Vehicle Color", "", false, "" )
-        +input_text( "vehicleYear", "Vehicle Year", "", false,  "" )
-        +input_text( "vehicleType", "Vehicle Type", "", false,  "" )
-        +input_text( "vehicleTagNumber", "Vehicle Tag Number", "", false, "" )
+        +input_text( "vehicleMake", "Make", "", false, "" )
+        +input_text( "vehicleModel", "Model", "", false,  "" )
+        +input_text( "vehicleColor", "Color", "", false, "" )
+        +input_text( "vehicleYear", "Year", "", false,  "" )
+        +input_text( "vehicleTrim", "Trim", "", false,  "" )
+        +input_text( "vehicleLicensePlate", "License Plate", "", false, "" )
         +input_text( "vehicleIdNumber", "Vehicle Identification Number (VIN)", "", false,  "" )
 
         .form-group.row
