Reorganization and update of attributes for bolo edit auto form and addition of attributes for pdf view

--- a/Code/src/web/views/bolo-edit-auto-form.jade
+++ b/Code/src/web/views/bolo-edit-auto-form.jade
@@ -33,12 +33,12 @@ block content
 
         +input_text_static( "category", "Category", "", false, "THEFT - AUTO")
 
-        +input_text( "vehicleMake", "Vehicle Make", "", false, bolo.vehicleMake )
-        +input_text( "vehicleModel", "Vehicle Model", "", false,  bolo.vehicleModel )
-        +input_text( "vehicleColor", "Vehicle Color", "", false, bolo.vehicleColor )
-        +input_text( "vehicleYear", "Vehicle Year", "", false,  bolo.vehicleYear )
-        +input_text( "vehicleType", "Vehicle Type", "", false,  bolo.vehicleType )
-        +input_text( "vehicleTagNumber", "Vehicle Tag Number", "", false, bolo.vehicleTagNumber )
+        +input_text( "vehicleYear", "Year", "", false,  bolo.vehicleYear )
+        +input_text( "vehicleMake", "Make", "", false, bolo.vehicleMake )
+        +input_text( "vehicleModel", "Model", "", false,  bolo.vehicleModel )
+        +input_text( "vehicleTrim", "Trim", "", false,  bolo.vehicleTrim )
+        +input_text( "vehicleColor", "Color", "", false, bolo.vehicleColor )
+        +input_text( "vehicleLicensePlate", "License Plate", "", false, bolo.vehicleLicensePlate )
         +input_text( "vehicleIdNumber", "Vehicle Identification Number (VIN)", "", false,  bolo.vehicleIdNumber )
 
 
