--- a/Code/src/web/views/layout.jade
+++ b/Code/src/web/views/layout.jade
@@ -7,6 +7,7 @@ script(src="/bower_components/jquery/dist/jquery.min.js" )
 script(src="/bower_components/jquery-ui/jquery-ui.min.js" )
 script(src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js" )
 script( type="text/javascript", src="/js/ui.js" )
+script( type="text/javascript", src="/js/jquery.maskedinput.js" )
 block scripts
 
 html.no-js
@@ -40,4 +41,3 @@ html.no-js
             .push
 
         include ./partials/footer.jade
-
