--- a/Code/src/web/views/bolo-edit-form.jade
+++ b/Code/src/web/views/bolo-edit-form.jade
@@ -37,11 +37,11 @@ block content
         +input_text( "dob", "Date of Birth (MM/DD/YYYY )", "MM/DD/YYYY", false, bolo.dob )
         +input_text( "dlNumber", "Drivers License Number", "", false, bolo.dlNumber )
         +input_text( "address", "Address", "", false, bolo.address )
-        +input_text( "zipCode", "Zip Code", "", false, bolo.zipCode )
+        +input_text( "zipCode", "Zip Code", "e.g. 33333", false, bolo.zipCode )
         +select_options( "race", "Race", races, false, bolo.race )
         +select_options( "sex", "Sex", sex, false, bolo.sex )
         +input_text( "height", "Height - Feet-Inches (e.g. 05-09)", "e.g. 05-09", false, bolo.height )
-        +input_text( "weight", "Weight - Pounds", "", false, bolo.weight )
+        +input_text( "weight", "Weight - Pounds", "e.g. 188", false, bolo.weight )
         +select_options( "hairColor", "Hair Color", hair_colors, false, bolo.hairColor )
         +input_textarea( "tattoos", "Tattoos", "", false, bolo.tattoos )
 
