changed label of button

--- a/Code/src/web/views/bolo-list-agency.jade
+++ b/Code/src/web/views/bolo-list-agency.jade
@@ -8,7 +8,7 @@ block jumbo
                 div.col-xs-1.col-md-10
                     p Active BOLOs
                 div.col-xs-1.dropdown
-                    button.dropbtn.btn.btn-default.dropdown-toggle(type="button" data-toggle="dropdown") Filter By Agency
+                    button.dropbtn.btn.btn-default.dropdown-toggle(type="button" data-toggle="dropdown") Filter By:
                         span.caret
                     ul.dropdown-menu
                         -var dimensions = "width: 210px; margin: 0 auto;"
