--- a/Code/src/web/views/bolo-preview-boat-details.jade
+++ b/Code/src/web/views/bolo-preview-boat-details.jade
@@ -49,30 +49,34 @@ block content
                   +form_labels_row("Author", bolo.data.authorFName + " " +  bolo.data.authorLName )
                 else
                   +form_labels_row("Author", "N/A")
-                if bolo.data.boatMake.length || bolo.data.boatModel.length
-                  +form_labels_row("Boat", bolo.data.boatMake + " " +  bolo.data.boatModel)
-                else
-                  +form_labels_row("Boat", "N/A" )
-                if bolo.data.boatColor.length
-                   +form_labels_row("Boat Color", bolo.data.boatColor, bolo.data.boatColor?"":"hidden")
-                else
-                   +form_labels_row("Boat Color", "N/A" )
                 if bolo.data.boatYear.length
-                   +form_labels_row("Boat Year", bolo.data.boatYear, bolo.data.boatYear?"":"hidden")
+                   +form_labels_row("Year", bolo.data.boatYear, bolo.data.boatYear?"":"hidden")
                 else
-                   +form_labels_row("Boat Year", "N/A" )
+                   +form_labels_row("Year", "N/A" )
+                if bolo.data.boatManufacturer.length
+                   +form_labels_row("Manufacturer", bolo.data.boatManufacturer, bolo.data.boatManufacturer?"":"hidden")
+                else
+                   +form_labels_row("Manufacturer", "N/A" )
                 if bolo.data.boatType.length
-                   +form_labels_row("Boat Type", bolo.data.boatType, bolo.data.boatType?"":"hidden")
+                   +form_labels_row("Type", bolo.data.boatType, bolo.data.boatType?"":"hidden")
                 else
-                   +form_labels_row("Boat Type", "N/A" )
+                   +form_labels_row("Type", "N/A" )
+                if bolo.data.boatLenght != "Select an option..."
+                   +form_labels_row("Lenght", bolo.data.boatLenght, bolo.data.boatLenght?"":"hidden")
+                else
+                   +form_labels_row("Lenght", "N/A" )
+                if bolo.data.boatColor.length
+                   +form_labels_row("Color", bolo.data.boatColor, bolo.data.boatColor?"":"hidden")
+                else
+                   +form_labels_row("Color", "N/A" )
                 if bolo.data.boatHullIdNumber.length
-                   +form_labels_row("Boat Hull Id Number", bolo.data.boatHullIdNumber, bolo.data.boatHullIdNumber?"":"hidden")
+                   +form_labels_row("Hull Id Number", bolo.data.boatHullIdNumber, bolo.data.boatHullIdNumber?"":"hidden")
                 else
-                   +form_labels_row("Boat Hull Id Number", "N/A" )
-                if bolo.data.boatRegistrationNumber.length
-                   +form_labels_row("Boat Registration Number", bolo.data.boatRegistrationNumber, bolo.data.boatRegistrationNumber?"":"hidden")
-                else
-                   +form_labels_row("Boat Registration Number", "N/A" )
+                   +form_labels_row("Hull Id Number", "N/A" )
+                 if bolo.data.boatRegistrationNumberSt != null || bolo.data.boatRegistrationNumberNu != null
+                   +form_labels_row("Registration Number", bolo.data.boatRegistrationNumberSt + " " +  bolo.data.boatRegistrationNumberNu )
+                 else
+                   +form_labels_row("Registration Number", "N/A")
 
             div.row
               div.col-xs-8
