Added new calls to the preview pdf service

--- a/Code/src/web/views/bolo-create-boat-form.jade
+++ b/Code/src/web/views/bolo-create-boat-form.jade
@@ -21,7 +21,7 @@ block content
         +input_text( "boatYear", "Year", "", false, "" )
         +input_text( "boatManufacturer", "Manufacturer", "", false, "" )
         +input_text( "boatType", "Type", "", false, "" )
-        +select_options( "boatLenght", "Lenght - Feet", boatFeet, false, "" )
+        +select_options( "boatLength", "Lengt - Feet", boatFeet, false, "" )
         +input_text( "boatColor", "Color", "", false, "" )
         +input_text( "boatHullIdNumber", "Hull Identification Number", "", false, "" )
 
