--- a/Code/src/web/views/bolo-preview-boat-details.jade
+++ b/Code/src/web/views/bolo-preview-boat-details.jade
@@ -62,9 +62,9 @@ block content
                 else
                    +form_labels_row("Type", "N/A" )
                 if bolo.data.boatLenght != "Select an option..."
-                   +form_labels_row("Lenght", bolo.data.boatLenght, bolo.data.boatLenght?"":"hidden")
+                   +form_labels_row("Length", bolo.data.boatLength, bolo.data.boatLength?"":"hidden")
                 else
-                   +form_labels_row("Lenght", "N/A" )
+                   +form_labels_row("Length", "N/A" )
                 if bolo.data.boatColor.length
                    +form_labels_row("Color", bolo.data.boatColor, bolo.data.boatColor?"":"hidden")
                 else
