--- a/Code/src/web/views/partials/bolo-options.jade
+++ b/Code/src/web/views/partials/bolo-options.jade
@@ -41,3 +41,15 @@
 
     var boatFeet = []
     for(var startFeet=1; startFeet<=100; startFeet++)boatFeet.push(startFeet);
+
+    var v_propulsion = [
+        '', 'Inboard', 'Outboard', 'Inboard/Outboard', 'Jet', 'Sail'
+    ]
+
+    var v_propulsion_type = [
+        '', 'Single', 'Twin', 'Triple', 'Quad'
+    ]
+
+    var v_propulsion_make = [
+        '', 'Evinrude', 'Honda', 'Johnson', 'Manner', 'Mariner', 'Mercury', 'Nissan', 'Susuki', 'Tucson', 'Yamaha'
+    ]
