--- a/Code/src/web/views/bolo-create-boat-form.jade
+++ b/Code/src/web/views/bolo-create-boat-form.jade
@@ -16,7 +16,7 @@ block content
 
         +input_text_static( "category", "Category", "", false, "THEFT - BOAT")
 
-        div.h3 VESSEL
+        div.h4 VESSEL
 
         +input_text( "boatYear", "Year", "e.g. 2016", false, "" )
         +input_text( "boatManufacturer", "Manufacturer", "", false, "" )
@@ -24,11 +24,19 @@ block content
         +select_options( "boatLength", "Length - Feet", boatFeet, false, "" )
         +input_text( "boatColor", "Color", "", false, "" )
         +input_text( "boatHullIdNumber", "Hull Identification Number", "", false, "" )
-        .col-md-4
-            +select_options( "boatRegistrationNumberSt", "Registration Number", states, false, "" )
-        .col-md-8
-            +input_text( "boatRegistrationNumberNu", "", "e.g. 1234AB", false, "" )
-            
+        .row
+            .col-md-4
+                +select_options( "boatRegistrationNumberSt", "Registration Number", states, false, "" )
+            .col-md-8
+                +input_text( "boatRegistrationNumberNu", "", "e.g. 1234AB", false, "" )
+
+        div.h4 PROPULSION
+
+        +select_options( "propulsion", "Propulsion", v_propulsion, false, "" )
+        +select_options( "propulsionType", "Type", v_propulsion_type, false, "" )
+        +select_options( "propulsionMake", "Make", v_propulsion_make, false, "" )
+        +input_text( "propulsionModel", "Model", "", false, "" )
+        +input_text( "propulsionSerialNumber", "Serial Number", "", false, "" )
 
         .form-group.row
             .col-md-4
