--- a/Code/src/web/views/bolo-preview-boat-details.jade
+++ b/Code/src/web/views/bolo-preview-boat-details.jade
@@ -77,10 +77,13 @@ block content
                    +form_labels_row("Hull Id Number", bolo.data.boatHullIdNumber, bolo.data.boatHullIdNumber?"":"hidden")
                 else
                    +form_labels_row("Hull Id Number", "N/A" )
-                if bolo.data.boatRegistrationNumberSt != null || bolo.data.boatRegistrationNumberNu != null
-                   +form_labels_row("Registration Number", bolo.data.boatRegistrationNumberSt + " " +  bolo.data.boatRegistrationNumberNu )
-                else
-                   +form_labels_row("Registration Number", "N/A")
+                   
+                div.row
+                   div.col-xs-12
+                      if bolo.data.boatRegistrationNumberSt != 'null' || bolo.data.boatRegistrationNumberNu != null
+                         +form_labels_row("Registration Number", bolo.data.boatRegistrationNumberSt + " " +  bolo.data.boatRegistrationNumberNu )
+                      else
+                         +form_labels_row("Registration Number", "N/A")
 
                 div.col-xs-12.h5.text-danger.strong PROPULSION
 
