Created the second part for the edit view for propulsion

--- a/Code/src/web/views/bolo-edit-boat-form.jade
+++ b/Code/src/web/views/bolo-edit-boat-form.jade
@@ -33,7 +33,7 @@ block content
 
         +input_text_static( "category", "Category", "", false, "THEFT - BOAT")
 
-        div.h3 VESSEL
+        div.h4 VESSEL
 
         +input_text( "boatYear", "Year", "e.g. 2016", false, bolo.boatYear )
         +input_text( "boatManufacturer", "Manufacturer", "", false, bolo.boatManufacturer )
@@ -41,10 +41,19 @@ block content
         +select_options( "boatLength", "Length - Feet", boatFeet, false, bolo.boatLength )
         +input_text( "boatColor", "Color", "", false, bolo.boatColor )
         +input_text( "boatHullIdNumber", "Hull Identification Number", "", false, bolo.boatHullIdNumber )
-        .col-md-4
-            +select_options( "boatRegistrationNumberSt", "Registration Number", states, false, bolo.boatRegistrationNumberSt )
-        .col-md-8
-            +input_text( "boatRegistrationNumberNu", "", "e.g. 1234AB", false, bolo.boatRegistrationNumberNu )
+        .row
+            .col-md-4
+                +select_options( "boatRegistrationNumberSt", "Registration Number", states, false, bolo.boatRegistrationNumberSt )
+            .col-md-8
+                +input_text( "boatRegistrationNumberNu", "", "e.g. 1234AB", false, bolo.boatRegistrationNumberNu )
+
+        div.h4 PROPULSION
+
+        +select_options( "propulsion", "Propulsion", v_propulsion, false, bolo.propulsion )
+        +select_options( "propulsionType", "Type", v_propulsion_type, false, bolo.propulsionType )
+        +select_options( "propulsionMake", "Make", v_propulsion_make, false, bolo.propulsionMake )
+        +input_text( "propulsionModel", "Model", "", false, bolo.propulsionModel )
+        +input_text( "propulsionSerialNumber", "Serial Number", "", false, bolo.prop )
 
 
         .form-group.row
