--- a/Code/src/web/views/partials/bolo-options.jade
+++ b/Code/src/web/views/partials/bolo-options.jade
@@ -32,7 +32,7 @@
     ]
 
     var states = [
-        "FL", "AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "DC", "FM", 
+        "FL", "AL", "AK", "AZ", "AR", "CA", "CO", "CT", "DE", "DC", "FM",
         "GA", "HI", "ID", "IL", "IN", "IA", "KS", "KY", "LA", "ME", "MD",
         "MA", "MI", "MN", "MS", "MO", "MT", "NE", "NV", "NH", "NJ", "NM",
         "NY", "NC", "ND", "MP", "OH", "OK", "OR", "PW", "PA", "RI", "SC",
@@ -43,7 +43,7 @@
     for(var startFeet=1; startFeet<=100; startFeet++)boatFeet.push(startFeet);
 
     var v_propulsion = [
-        '', 'Inboard', 'Outboard', 'Inboard/Outboard', 'Jet', 'Sail'
+        'N/A', 'Inboard', 'Outboard', 'Inboard/Outboard', 'Jet', 'Sail'
     ]
 
     var v_propulsion_type = [
@@ -52,4 +52,13 @@
 
     var v_propulsion_make = [
         '', 'Evinrude', 'Honda', 'Johnson', 'Manner', 'Mariner', 'Mercury', 'Nissan', 'Susuki', 'Tucson', 'Yamaha'
+    ]
+
+    var v_trailer = [
+        'N/A', 'Yes'
+    ]
+
+    var v_trailer_manufacturer = [
+        'N/A', 'ACE Trailers', 'Aluma', 'Boatmaster Trailers', 'Continental Trailers', 'EZ Loader Boat Trailers',
+        'Integrity Trailers', 'Mastercraft Boat Company', 'Road King Trailers', 'Wolverine Trailers'
     ]
